--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,3 +1,32 @@
+/* Hide bullet points for participants */
+.participants-list {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5em;
+}
+
+.participant-item {
+  display: inline-flex;
+  align-items: center;
+  background: #f2f2f2;
+  border-radius: 16px;
+  padding: 0.2em 0.7em 0.2em 0.5em;
+  margin: 0.1em 0.2em;
+  font-size: 0.97em;
+}
+
+.delete-participant {
+  cursor: pointer;
+  color: #c00;
+  margin-left: 0.4em;
+  font-size: 1.1em;
+  transition: color 0.2s;
+}
+.delete-participant:hover {
+  color: #f33;
+}
 * {
   box-sizing: border-box;
   margin: 0;
